Fixed issue with text not centered

--- a/css/style.css
+++ b/css/style.css
@@ -45,7 +45,7 @@ select{
     height: 50px;
     font-size: 1.2rem;
     border-radius: .5rem;
-    text-align: center;
+    text-align-last: center;
 }
 
 input {
